# py_examples

./: .gitignore  12factor.md  README.md  orm.md  pyproject.toml  readme.md  requirements.txt  test_jwt.py
audios/: pyproject.toml  rec_pa.py  rec_sd.py  requirements.txt
azure-stt/: README.md  basic.py  continuos.py  diarize.py  langid.py  pyproject.toml
cryptog/: ferne.py  pyproject.toml
docli/: README.md  chunk_table.py  conv0_min.py  conv1_custom.py  conv_custom.py  conv_ocr_full_page.py  conv_ocr_lang_detect.py  conv_rapidocr.py  conv_surya.py  conv_table.py  conv_vlm.py  pyproject.toml  xpdf.py
esearch/: 00_knn.py  01_match.py  README.md  basic.py  cli.py  pyproject.toml  ql.py
h2-examples/: pyproject.toml
jwt2/: algo.py  api.py  genkey.sh  main.py  pyproject.toml  requirements.txt
mongo/: README.md  main.py  pyproject.toml
prom/: docker-compose.yml  fast_otel.py  fast_prom.py  prom.yml  pyproject.toml  readme.md  requirements.txt  simple_prom.py
redstream/: DESIGN.md  README.md  consumer.py  producer.py  pyproject.toml  redis_client.py
requestx/: README.md  ben.py  cli.py  cli_aio.py  pyproject.toml  srv.py
sched/: async.py  blocking.py  exact_sleep.py  pyproject.toml  thread.py  threadpool.py
spaci/: bm25_search.py  lang_anno.py  ner.py  pyproject.toml  search_bm25_vi.py  search_tantivy_vi.py  search_tfidf_scratch.py  search_tfidf_sklearn.py  sent_seg.py  sent_seg_rule.py  sent_seg_stat.py  sim.py  tfidf_scratch.py  tfidf_sklearn.py
sse/: aclient.py  client.py  log-config.yml  pyproject.toml  requirements.txt  server.py
taskq/: a1_basic.py  a2_dep.py  a3_zero.py  a4_red.py  a5_jet.py  basic.py  cron.py  dep.py  pyproject.toml  red.py  zero.py
torchsrv/: README.md  archive_greeter.sh  archive_resnet18.sh  compose.yml  config.properties  pyproject.toml
torchsrv/custom_svc/: greeter_handler.py  test_multi.py
transfm/: chat.py  emb.py  pyproject.toml  rerank.py  sparse.py
tritonsrv/: README.md  compose.yml  pyproject.toml  simple1_int.py  simple2_string.py  simple3_callback.py  simple4_sequence.py  simple5_sequence_async_stream.py  simple6_int_aio.py  simple7_sequence_aio_stream.py  simple_health.py
typedsetting/: config.py  main.py  pyproject.toml
