[project]
name = "py-examples"
version = "0.1.0"
description = "Repository of Python examples and patterns"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[tool.uv.workspace]
members = ["*"]
exclude = ["docli", "esearch"]
