[project]
name = "docli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling-surya>=0.1.0",
    "docling[easyocr,rapidocr,tesserocr,vlm]>=2.70.0",
    "kreuzberg[all]>=4.8.5",
    "modelscope>=1.34.0",
    "opendataloader-pdf>=2.2.1",
    "pypdf>=6.6.2",
    "tiktoken>=0.12.0",
]
