[project]
name = "requestx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "aiohttp[speedups]>=3.13.3",
    "fastapi>=0.135.1",
    "geventhttpclient>=2.3.7",
    "httpx[brotli,zstd]>=0.28.1",
    "niquests[brotli,speedups,zstd]>=3.16.1",
    "pycurl-requests>=0.5.1",
    "requests>=2.32.5",
    "urllib3[brotli,zstd]>=2.6.3",
    "uvicorn[standard]>=0.42.0",
]
